@@ -7,11 +7,13 @@ dependencies {
     testImplementation(intellijCore())
     testImplementation(projectTests(":compiler:tests-common"))
 
-    testImplementation("com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.12.7")
-    testImplementation("com.fasterxml.jackson.module:jackson-module-kotlin:2.12.7")
-    testImplementation("com.fasterxml.woodstox:woodstox-core:6.2.4")
+    testImplementation(libs.jackson.dataformat.xml)
+    testImplementation(libs.jackson.module.kotlin)
+    testImplementation(libs.woodstox.core)
+    testApi(platform(libs.junit.bom))
+    testImplementation(libs.junit4)
 
-    testImplementation("org.eclipse.jgit:org.eclipse.jgit:5.13.0.202109080827-r")
+    testImplementation(libs.jgit)
 }
 
 sourceSets {
@@ -21,9 +23,11 @@ sourceSets {
     }
 }
 
-projectTest() {
+projectTest {
     dependsOn(":dist")
     workingDir = rootDir
+    javaLauncher.set(getToolchainLauncherFor(JdkMajorVersion.JDK_17_0))
+    jvmArgs("--add-opens=java.base/java.io=ALL-UNNAMED")
 }
 
 testsJar()
